[gd_scene load_steps=67 format=2]

[ext_resource path="res://Assets/Warrior/Individual Sprite/idle/Warrior_Idle_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Warrior/Individual Sprite/idle/Warrior_Idle_6.png" type="Texture" id=2]
[ext_resource path="res://Assets/Warrior/Individual Sprite/idle/Warrior_Idle_5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Warrior/Individual Sprite/idle/Warrior_Idle_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Warrior/Individual Sprite/idle/Warrior_Idle_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Warrior/Individual Sprite/idle/Warrior_Idle_4.png" type="Texture" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_8.png" type="Texture" id=13]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Run/Warrior_Run_4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Jump/Warrior_Jump_1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Jump/Warrior_Jump_2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Fall/Warrior_Fall_2.png" type="Texture" id=18]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Jump/Warrior_Jump_3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Fall/Warrior_Fall_3.png" type="Texture" id=20]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Fall/Warrior_Fall_1.png" type="Texture" id=21]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Crouch/Warrior_Crouch_4.png" type="Texture" id=22]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Crouch/Warrior_Crouch_3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Crouch/Warrior_Crouch_1.png" type="Texture" id=24]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Crouch/Warrior_Crouch_2.png" type="Texture" id=25]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Crouch/Warrior_Crouch_5.png" type="Texture" id=26]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Crouch/Warrior_Crouch_6.png" type="Texture" id=27]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_5.png" type="Texture" id=28]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_8.png" type="Texture" id=29]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_1.png" type="Texture" id=30]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_2.png" type="Texture" id=31]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_4.png" type="Texture" id=32]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_11.png" type="Texture" id=33]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_3.png" type="Texture" id=34]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_12.png" type="Texture" id=35]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_6.png" type="Texture" id=36]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_7.png" type="Texture" id=37]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_10.png" type="Texture" id=38]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Attack/Warrior_Attack_9.png" type="Texture" id=39]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_1.png" type="Texture" id=40]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_3.png" type="Texture" id=41]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_2.png" type="Texture" id=42]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_4.png" type="Texture" id=43]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_1.png" type="Texture" id=44]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_2.png" type="Texture" id=45]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_3.png" type="Texture" id=46]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_4.png" type="Texture" id=47]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_5.png" type="Texture" id=48]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_6.png" type="Texture" id=49]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_7.png" type="Texture" id=50]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_11.png" type="Texture" id=51]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_10.png" type="Texture" id=52]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_9.png" type="Texture" id=53]
[ext_resource path="res://Assets/Warrior/Individual Sprite/Death-Effect/Warrior_Death_8.png" type="Texture" id=54]
[ext_resource path="res://Assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=55]
[ext_resource path="res://Assets/sfx/Jump.mp3" type="AudioStream" id=56]
[ext_resource path="res://Assets/sfx/Atk1.mp3" type="AudioStream" id=57]
[ext_resource path="res://Assets/sfx/Atk2.mp3" type="AudioStream" id=58]
[ext_resource path="res://Assets/sfx/CharHurt.mp3" type="AudioStream" id=59]
[ext_resource path="res://Assets/sfx/DJAcquired.mp3" type="AudioStream" id=60]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 29 ), ExtResource( 39 ) ],
"loop": false,
"name": "Attack1",
"speed": 50.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 33 ), ExtResource( 35 ) ],
"loop": false,
"name": "Attack2",
"speed": 50.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 22 ) ],
"loop": false,
"name": "CrouchPress",
"speed": 10.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 43 ) ],
"loop": false,
"name": "Hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 20 ) ],
"loop": false,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": false,
"name": "CrouchRelease",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 13 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 51 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.69162
height = 17.1988

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.0815, 17.5274 )

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 1
outline_color = Color( 0.207843, 0.207843, 0.207843, 1 )
font_data = ExtResource( 55 )

[sub_resource type="Animation" id=5]
resource_name = "XP"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "something"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("something:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("something:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 8, 0 )
scale = Vector2( 2, 2 )
collision_mask = 31
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 5.5 )
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ComboDelay" type="Timer" parent="."]
wait_time = 0.05

[node name="SwordHit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHit"]
position = Vector2( 16, -3 )
shape = SubResource( 3 )
disabled = true

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -48.0
margin_top = -46.0
margin_right = 41.0
margin_bottom = -31.2692
custom_fonts/font = SubResource( 4 )
text = "Learned \"Double Jump\""
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="something" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -48.0
margin_top = -46.0
margin_right = 41.0
margin_bottom = -31.2692
custom_fonts/font = SubResource( 4 )
text = "Something is coming..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DJAnimation" type="AnimationPlayer" parent="."]
anims/XP = SubResource( 5 )
anims/something = SubResource( 6 )

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 56 )

[node name="AudioAtk1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 57 )

[node name="AudioAtk2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 58 )

[node name="CharHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 59 )

[node name="DjAcquired" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 60 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="ComboDelay" to="." method="_on_ComboDelay_timeout"]
[connection signal="body_entered" from="SwordHit" to="." method="_on_SwordHit_body_entered"]
